Sonarlint errors fix